some changes to the file

--- a/cars.html
+++ b/cars.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title> cars </title>
   <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
@@ -14,6 +15,7 @@
       <a href="index.html" title="index Page"> index</a>
       <a href="cars.html" title="cars Page"> Cars</a>
       <a href="food.html" title="food Page"> Food</a>
+	  <a href="maps.html">Maps</a>
     </ul>
   </nav>
     <h1> My Favorite Cars</h1> 
