--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title> Resume</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
@@ -15,6 +16,7 @@
       <a href="index.html" title="index Page"> index</a>
       <a href="cars.html" title="cars Page"> Cars</a>
       <a href="food.html" title="food Page"> Food</a>
+	  <a href="maps.html">Maps</a>
     </ul>
   </nav>
     <h1>Muhammad Hamza Mobeen</h1>
