--- a/food.html
+++ b/food.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title> Food </title>
   <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
   <div>
@@ -13,6 +14,7 @@
    <a href="index.html" title = "index Page"> index</a>
    <a href="cars.html" title = "cars Page"> Cars</a>
    <a href="food.html" title = "food Page"> Food</a>
+   <a href="maps.html">Maps</a>
    
   </ul>
   </nav>  
