--- a/cars.html
+++ b/cars.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title> cars </title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title> cars </title>
-  <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" href="css/normalize.css">
-</head>
-
-<body>
-  <nav id="navbar">
-  <div id="navbar-container">
-    <ul>
-      <a href="index.html" title="index Page"> index</a>
-      <a href="cars.html" title="cars Page"> Cars</a>
-      <a href="food.html" title="food Page"> Food</a>
-	  <a href="maps.html">Maps</a>
-    </ul>
-  </nav>
+  <body>
+    <nav id="navbar">
+    <div id="navbar-container">
+      <ul>
+        <a href="index.html" title="index Page"> index</a>
+        <a href="cars.html" title="cars Page"> Cars</a>
+        <a href="food.html" title="food Page"> Food</a>
+	    <a href="maps.html">Map</a>
+      </ul>
+    </nav>
     <h1> My Favorite Cars</h1> 
 	
 	<img src = "media/burn.jpg" alt="burn">
@@ -30,7 +29,7 @@
     <p> S-class 550 Has always been one of two of my favorite car. It falls under the sedan category of vehicles. It is a Luxury feeling that makes you want to buy it immediately and travel long distances. When You enter in Vehicles it welcomes you with a Glowing Mercedes strip Going all the way to the dashboard. its extravagant interior and exterior shape make it stand out.</p>
     <h2> Chevy Camaro</h2>
     <p> My Second Favourite Chevy Camaro SS or LT1</p> <img src="media/camaro.jpg" alt="camaro">
-  </div>
-</body>
+    </div>
+  </body>
 
 </html>
