--- a/maps.html
+++ b/maps.html
@@ -13,17 +13,18 @@
          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4zEt1NP2SfIBg4RqoM0rt_KPkMCRmJw4&callback=initMap"></script>
    </head>
    <body>
-      <nav id="navigation">
-         <ul>
-            <a href="home.html">Home</a>
-            <a href="aboutme.html"> About Me</a>
-            <a href="index.html">Resume</a>
-            <a href="maps.html">Maps</a>
-         </ul>
-      </nav>
+     <nav id="navbar">
+     <div id="navbar-container">
+       <ul>
+         <a href="index.html" title="index Page"> index</a>
+         <a href="cars.html" title="cars Page"> Cars</a>
+         <a href="food.html" title="food Page"> Food</a>
+	     <a href="maps.html">Map</a>
+       </ul>
+     </nav>
       <header>
          <h1>
-            Map:
+            Map
          </h1>
       </header>
       <div id="map"></div>
