--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <title> Resume</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/normalize.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <title> Resume</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+  </head>
 
-<body>
-  <div>
-  <nav id="navbar">
-  <div id="navbar-container">
+  <body>
+    <div>
+    <nav id="navbar">
+    <div id="navbar-container">
     <ul>
       <a href="index.html" title="index Page"> index</a>
       <a href="cars.html" title="cars Page"> Cars</a>
       <a href="food.html" title="food Page"> Food</a>
-	  <a href="maps.html">Maps</a>
+	  <a href="maps.html">Map</a>
     </ul>
-  </nav>
+    </nav>
     <h1>Muhammad Hamza Mobeen</h1>
     <h2>Contact Information</h2>
     <ul>
