--- a/maps.html
+++ b/maps.html
@@ -14,18 +14,18 @@
    </head>
    <body>
      <nav id="navbar">
-     <div id="navbar-container">
        <ul>
-         <a href="index.html" title="index Page"> index</a>
-         <a href="cars.html" title="cars Page"> Cars</a>
-         <a href="food.html" title="food Page"> Food</a>
-	     <a href="maps.html">Map</a>
+         <li><a href="index.html" title="index Page"> index</a></li>
+         <li><a href="cars.html" title="cars Page"> Cars</a></li>
+         <li><a href="food.html" title="food Page"> Food</a></li>
+	     <li><a href="maps.html">Map</a></li>
        </ul>
      </nav>
       <header>
          <h1>
             Map
          </h1>
+		 <p> Double Click The Map Button</p>
       </header>
       <div id="map"></div>
    </body>
