--- a/cars.html
+++ b/cars.html
@@ -15,6 +15,7 @@
 
   <body>
     <nav id="navbar">
+	<div id="navbar-container">
       <ul>
         <li><a href="index.html" title="index Page"> index</a></li>
         <li><a href="cars.html" title="cars Page"> Cars</a></li>
