--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <div>
     <nav id="navbar">
+	<div id="navbar-container">
     <ul>
       <li><a href="index.html" title="index Page"> index</a></li>
       <li><a href="cars.html" title="cars Page"> Cars</a></li>
