--- a/maps.html
+++ b/maps.html
@@ -14,6 +14,7 @@
    </head>
    <body>
      <nav id="navbar">
+	 <div id="navbar-container">
        <ul>
        <li><a href="index.html" title="index Page"> index</a></li>
        <li><a href="cars.html" title="cars Page"> Cars</a></li>
