--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <li><a href="food.html" title="food Page"> Food</a></li>
 	  <li><a href="maps.html">Map</a></li>
     </ul>
+	</div>
     </nav>
     <h1>Muhammad Hamza Mobeen</h1>
     <h2>Contact Information</h2>
