--- a/maps.html
+++ b/maps.html
@@ -21,6 +21,7 @@
        <li><a href="food.html" title="food Page"> Food</a></li>
 	   <li><a href="maps.html">Map</a></li>
        </ul>
+	 </div>
      </nav>
       <header>
         <h1>
