--- a/cars.html
+++ b/cars.html
@@ -22,6 +22,7 @@
         <li><a href="food.html" title="food Page"> Food</a></li>
 	    <li><a href="maps.html">Map</a></li>
       </ul>
+	 </div>
     </nav>
     <h1> My Favorite Cars</h1> 
 	
