--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <nav id="navbar">
 	<div id="navbar-container">
     <ul>
-      <li><a href="index.html" title="index Page"> index</a></li>
-      <li><a href="cars.html" title="cars Page"> Cars</a></li>
-      <li><a href="food.html" title="food Page"> Food</a></li>
-	  <li><a href="maps.html">Map</a></li>
+      <a href="index.html" title="index Page"> index</a>
+      <a href="cars.html" title="cars Page"> Cars</a>
+      <a href="food.html" title="food Page"> Food</a>
+	  <a href="maps.html">Map</a>
     </ul>
 	</div>
     </nav>
